# Console-Football-Manager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Callable.h  Logger.cpp  Logger.h  Makefile  Object.cpp  Object.h  Player.cpp  Player.h  PlayerDictionary.cpp  PlayerDictionary.h  README.md  Team.cpp  Team.h  build.sh  cmake_install.cmake  main.cpp  readme.md
include/: PlayerDictionary.h  Team.h
src/: Graphics.cpp  Player.cpp  Team.cpp
